--- a/admin-hf-setting.html
+++ b/admin-hf-setting.html
@@ -1,5 +1,6 @@
+<!-- admin-hf-setting 完全修正版 (gradient UI 復活, new schema 対応) -->
 <style>
-  /* === Scoped styles to avoid interfering with the admin top layout === */
+  /* ===== Scoped to avoid interference with the admin layout ===== */
   #hf-app { box-sizing: border-box; width: 100%; margin: 0; padding: 16px; font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans JP', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif; color:#0f172a; }
   #hf-app h1 { font-size: 20px; margin: 0 0 16px 0; }
   #hf-app .card { background:#fff; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.08); padding:16px; margin:0 0 16px 0; }
@@ -9,18 +10,19 @@
   #hf-app .btn.primary { background:#2563eb; color:#fff; }
   #hf-app .btn.small { font-size:12px; padding:2px 8px; margin-left:8px; }
   #hf-app .groups { display:flex; gap:12px; flex-wrap:wrap; }
-  #hf-app fieldset.group { flex:1; min-width:240px; border:1px solid #e2e8f0; border-radius:10px; padding:10px; }
+  #hf-app fieldset.group { flex:1; min-width:260px; border:1px solid #e2e8f0; border-radius:10px; padding:10px; }
   #hf-app legend { font-size:12px; padding:0 6px; color:#334155; }
   #hf-app .field { display:flex; align-items:center; justify-content:space-between; gap:8px; margin:6px 0; }
   #hf-app .field label { flex:0 0 38%; font-size:12px; color:#475569; }
-  #hf-app .field input, #hf-app .field select, #hf-app .field textarea { flex:1; padding:6px; border:1px solid #cbd5e1; border-radius:8px; font-size:13px; }
+  #hf-app .field input, #hf-app .field select { flex:1; padding:6px; border:1px solid #cbd5e1; border-radius:8px; font-size:13px; }
   #hf-app .preview { border:1px dashed #cbd5e1; border-radius:10px; padding:12px; margin-bottom:12px; background:#f8fafc; }
+  /* Preview building blocks */
   #hf-app .hfbar { display:flex; align-items:center; justify-content:space-between; gap:var(--gap,16px); border-radius:8px; }
   #hf-app .hfbar.hf-column { flex-direction:column; align-items:flex-start; }
   #hf-app .hf-brand { display:flex; align-items:center; gap:8px; }
   #hf-app .hf-brand img { max-height:48px; }
   #hf-app .hf-nav { display:flex; gap:var(--gap,16px); flex-wrap:wrap; }
-  #hf-app .hf-nav a { text-decoration:none; padding:2px 4px; border-radius:6px; }
+  #hf-app .hf-nav a { text-decoration:none; border-radius:6px; padding:2px 4px; }
   #hf-app .hf-copy { font-size:12px; display:flex; width:100%; }
   #hf-app #toast { position:fixed; top:16px; right:16px; z-index:1000; }
   #hf-app .toast { background:#2563eb; color:#fff; padding:8px 12px; border-radius:10px; margin-top:10px; font-size:13px; box-shadow:0 2px 6px rgba(0,0,0,0.2); opacity:0.97; }
@@ -41,14 +43,14 @@
             <option value="column">2行（縦並び）</option>
           </select>
         </label>
-        <button id="saveHeader" class="btn primary">保存</button>
+        <button id="saveHeader" class="btn primary" type="button">保存</button>
       </div>
     </div>
     <div id="headerPreview" class="preview"></div>
     <div class="groups">
       <!-- ロゴ -->
       <fieldset class="group"><legend>ロゴ</legend>
-        <div class="field"><label>URL</</label><input id="logo_url" type="text" placeholder="https://.../logo.png"></div>
+        <div class="field"><label>URL</label><input id="logo_url" type="text" placeholder="https://.../logo.png"></div>
         <div class="field"><label>高さ(px)</label><input id="logo_height" type="number" min="0" step="1" placeholder="48"></div>
         <div class="field"><label>位置</label>
           <select id="logo_alignment"><option>left</option><option>center</option><option>right</option></select>
@@ -74,12 +76,13 @@
         <div class="field"><label>パディング</label><input id="padding_header" type="text" placeholder="8px 12px"></div>
         <div class="field"><label>リンク間隔</label><input id="link_spacing_header" type="number" min="0" step="1" placeholder="16"></div>
         <div class="field"><label>背景色</label><input id="bg_color_header" type="color"></div>
-        <div class="field"><label>背景グラデーション</label>
-          <div class="field">
-            <input id="bg_gradient_header" type="text" placeholder="linear-gradient(90deg, #000, #333)" />
-            <button id="grad_reset_header" class="btn small" type="button">リセット</button>
-          </div>
+        <div class="field"><label>グラデーション</label><input id="bg_gradient_header" type="text" placeholder="linear-gradient(to right, #000000, #333333)" readonly></div>
+        <div class="field"><label>方向</label>
+          <select id="grad_dir_header"><option value="to right">→</option><option value="to bottom">↓</option><option value="to left">←</option><option value="to top">↑</option></select>
         </div>
+        <div class="field"><label>開始色</label><input id="grad_start_header" type="color" value="#000000"></div>
+        <div class="field"><label>終了色</label><input id="grad_end_header" type="color" value="#333333"></div>
+        <div class="field"><label>操作</label><div style="display:flex;gap:8px;"><button id="grad_apply_header" class="btn small" type="button">生成</button><button id="grad_reset_header" class="btn small" type="button">リセット</button></div></div>
       </fieldset>
     </div>
   </section>
@@ -96,7 +99,7 @@
             <option value="nav-bottom">ナビ上／コピー下</option>
           </select>
         </label>
-        <button id="saveFooter" class="btn primary">保存</button>
+        <button id="saveFooter" class="btn primary" type="button">保存</button>
       </div>
     </div>
     <div id="footerPreview" class="preview"></div>
@@ -121,12 +124,13 @@
         <div class="field"><label>パディング</label><input id="padding_footer" type="text" placeholder="8px 12px"></div>
         <div class="field"><label>リンク間隔</label><input id="link_spacing_footer" type="number" min="0" step="1" placeholder="16"></div>
         <div class="field"><label>背景色</label><input id="bg_color_footer" type="color"></div>
-        <div class="field"><label>背景グラデーション</label>
-          <div class="field">
-            <input id="bg_gradient_footer" type="text" placeholder="linear-gradient(180deg, #000, #333)" />
-            <button id="grad_reset_footer" class="btn small" type="button">リセット</button>
-          </div>
+        <div class="field"><label>グラデーション</label><input id="bg_gradient_footer" type="text" placeholder="linear-gradient(to right, #000000, #333333)" readonly></div>
+        <div class="field"><label>方向</label>
+          <select id="grad_dir_footer"><option value="to right">→</option><option value="to bottom">↓</option><option value="to left">←</option><option value="to top">↑</option></select>
         </div>
+        <div class="field"><label>開始色</label><input id="grad_start_footer" type="color" value="#000000"></div>
+        <div class="field"><label>終了色</label><input id="grad_end_footer" type="color" value="#333333"></div>
+        <div class="field"><label>操作</label><div style="display:flex;gap:8px;"><button id="grad_apply_footer" class="btn small" type="button">生成</button><button id="grad_reset_footer" class="btn small" type="button">リセット</button></div></div>
       </fieldset>
     </div>
   </section>
@@ -157,71 +161,52 @@
     setTimeout(() => n.remove(), 2200);
   };
   const toJustify = (p) => (p === "left" ? "flex-start" : p === "right" ? "flex-end" : "center");
+  const linear = (dir, a, b) => (!a || !b ? "" : `linear-gradient(${dir}, ${a}, ${b})`);
 
   // ---- Data loaders ----
   let menus = [];
   async function loadMenus() {
     const { data, error } = await supabase.from("public_menus").select("*").order("sort_order", { ascending: true });
-    if (error) {
-      console.error(error);
-      toast("メニュー読み込み失敗", false);
-      return [];
-    }
+    if (error) { console.error(error); toast("メニュー読み込み失敗", false); return []; }
     return data || [];
   }
   async function loadRow(area) {
     const { data, error } = await supabase.from("hf_settings").select("*").eq("area", area).single();
-    if (error) {
-      console.warn("hf_settings load error:", area, error);
-      return {};
-    }
+    if (error) { console.warn("hf_settings load error:", area, error); return {}; }
     return data || {};
   }
   async function saveRow(area, payload) {
     const { error } = await supabase.from("hf_settings").update(payload).eq("area", area);
-    if (error) {
-      console.error(error);
-      toast("保存失敗", false);
-      return;
-    }
+    if (error) { console.error(error); toast("保存失敗", false); return; }
     toast("保存しました", true);
   }
 
   // ---- Preview builders ----
   function headerHTML(d) {
-    const items = menus
-      .filter((m) => m.is_active && m.show_in_header)
-      .map((m) => `<a href="\${m.href || "#"}">${m.title}</a>`)
-      .join("");
-    const bg = d.bg_gradient && d.bg_gradient.trim() ? d.bg_gradient : (d.bg_color || "#0f172a");
-    const brand = \`
-      <div class="hf-brand" style="justify-content:\${toJustify(d.company_alignment)}">
-        \${d.logo_url ? \`<img src="\${d.logo_url}" alt="logo" style="height:\${Number(d.logo_height)||0}px">\` : ""}
-        <span style="color:\${d.company_color};font-weight:\${d.company_weight}">\${d.company_name || ""}</span>
-      </div>\`;
-    const nav = \`<nav class="hf-nav" style="color:\${d.nav_color};font-weight:\${d.nav_weight};justify-content:\${toJustify(d.nav_alignment)}">\${items}</nav>\`;
-    const inner = d.layout_mode === "column"
-      ? \`\${brand}\${nav}\`
-      : \`<div style="flex:1;display:flex;justify-content:\${toJustify(d.logo_alignment)}">\${brand}</div>\${nav}\`;
+    const items = menus.filter(m => m.is_active && m.show_in_header).map(m => `<a href="${m.href || '#'}">${m.title}</a>`).join("");
+    const bg = (d.bg_gradient && d.bg_gradient.trim()) ? d.bg_gradient : (d.bg_color || "#0f172a");
+    const brand = `
+      <div class="hf-brand" style="justify-content:${toJustify(d.logo_alignment)}">
+        ${d.logo_url ? `<img src="${d.logo_url}" alt="logo" style="height:${Number(d.logo_height)||0}px">` : ""}
+        <span style="color:${d.company_color};font-weight:${d.company_weight}">${d.company_name || ""}</span>
+      </div>`;
+    const nav = `<nav class="hf-nav" style="color:${d.nav_color};font-weight:${d.nav_weight};justify-content:${toJustify(d.nav_alignment)}">${items}</nav>`;
+    const inner = d.layout_mode === "column" ? `${brand}${nav}` : `<div style="flex:1;display:flex;justify-content:${toJustify(d.company_alignment)}">${brand}</div>${nav}`;
     const cls = d.layout_mode === "column" ? "hfbar hf-column" : "hfbar";
-    return \`<div class="\${cls}" style="background:\${bg};font-size:\${Number(d.font_size)||14}px;height:\${Number(d.bar_height)||60}px;padding:\${d.padding||"8px"};--gap:\${Number(d.link_spacing)||16}px">\${inner}</div>\`;
+    return `<div class="${cls}" style="background:${bg};font-size:${Number(d.font_size)||14}px;height:${Number(d.bar_height)||60}px;padding:${d.padding||'8px'};--gap:${Number(d.link_spacing)||16}px">${inner}</div>`;
   }
-
   function footerHTML(d) {
-    const items = menus
-      .filter((m) => m.is_active && m.show_in_footer)
-      .map((m) => `<a href="\${m.href || "#"}">${m.title}</a>`)
-      .join("");
-    const bg = d.bg_gradient && d.bg_gradient.trim() ? d.bg_gradient : (d.bg_color || "#0f172a");
-    const nav = \`<nav class="hf-nav" style="color:\${d.nav_color_footer};font-weight:\${d.nav_weight_footer};justify-content:\${toJustify(d.nav_alignment_footer)}">\${items}</nav>\`;
-    const copy = \`<div class="hf-copy" style="color:\${d.footer_color};justify-content:\${toJustify(d.footer_alignment)}">\${d.footer_text || ""}</div>\`;
+    const items = menus.filter(m => m.is_active && m.show_in_footer).map(m => `<a href="${m.href || '#'}">${m.title}</a>`).join("");
+    const bg = (d.bg_gradient && d.bg_gradient.trim()) ? d.bg_gradient : (d.bg_color || "#0f172a");
+    const nav = `<nav class="hf-nav" style="color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};justify-content:${toJustify(d.nav_alignment_footer)}">${items}</nav>`;
+    const copy = `<div class="hf-copy" style="color:${d.footer_color};justify-content:${toJustify(d.footer_alignment)}">${d.footer_text || ""}</div>`;
     let inner = "";
-    if (d.layout_mode === "row") inner = \`\${copy}\${nav}\`;
-    else if (d.layout_mode === "nav-top") inner = \`\${nav}\${copy}\`;
-    else inner = \`\${copy}\${nav}\`;
+    if (d.layout_mode === "row") inner = `${copy}${nav}`;
+    else if (d.layout_mode === "nav-top") inner = `${nav}${copy}`;
+    else inner = `${copy}${nav}`;
     const cls = d.layout_mode === "row" ? "hfbar" : "hfbar hf-column";
     const sticky = d.footer_fixed ? "position:sticky;bottom:0;" : "";
-    return \`<div class="\${cls}" style="\${sticky}background:\${bg};font-size:\${Number(d.font_size)||14}px;height:\${Number(d.bar_height)||60}px;padding:\${d.padding||"8px"};--gap:\${Number(d.link_spacing)||16}px">\${inner}</div>\`;
+    return `<div class="${cls}" style="${sticky}background:${bg};font-size:${Number(d.font_size)||14}px;height:${Number(d.bar_height)||60}px;padding:${d.padding||'8px'};--gap:${Number(d.link_spacing)||16}px">${inner}</div>`;
   }
 
   // ---- Form <-> Object ----
@@ -264,6 +249,7 @@
     $("#bg_color_header").value = r.bg_color || "#ffffff";
     $("#bg_gradient_header").value = r.bg_gradient || "";
     $("#header_layout_mode").value = r.layout_mode || "row";
+    // gradient UI（復元値の分解は省略：テキスト→UIの相互変換は生成時に上書き）
     $("#headerPreview").innerHTML = headerHTML(r);
   }
 
@@ -303,6 +289,30 @@
     $("#footerPreview").innerHTML = footerHTML(r);
   }
 
+  // ---- Gradient UI handlers ----
+  function applyHeaderGradient() {
+    const dir = $("#grad_dir_header").value;
+    const a = $("#grad_start_header").value;
+    const b = $("#grad_end_header").value;
+    $("#bg_gradient_header").value = linear(dir, a, b);
+    $("#headerPreview").innerHTML = headerHTML(getHeader());
+  }
+  function resetHeaderGradient() {
+    $("#bg_gradient_header").value = "";
+    $("#headerPreview").innerHTML = headerHTML(getHeader());
+  }
+  function applyFooterGradient() {
+    const dir = $("#grad_dir_footer").value;
+    const a = $("#grad_start_footer").value;
+    const b = $("#grad_end_footer").value;
+    $("#bg_gradient_footer").value = linear(dir, a, b);
+    $("#footerPreview").innerHTML = footerHTML(getFooter());
+  }
+  function resetFooterGradient() {
+    $("#bg_gradient_footer").value = "";
+    $("#footerPreview").innerHTML = footerHTML(getFooter());
+  }
+
   // ---- Init ----
   (async () => {
     menus = await loadMenus();
@@ -311,36 +321,24 @@
     setHeader(header);
     setFooter(footer);
 
-    // 保存ボタン
-    $("#saveHeader").onclick = async () => {
-      const data = getHeader();
-      setHeader(data);
-      await saveRow("header", data);
-    };
-    $("#saveFooter").onclick = async () => {
-      const data = getFooter();
-      setFooter(data);
-      await saveRow("footer", data);
-    };
+    // 保存
+    $("#saveHeader").onclick = async () => { const d = getHeader(); setHeader(d); await saveRow("header", d); };
+    $("#saveFooter").onclick = async () => { const d = getFooter(); setFooter(d); await saveRow("footer", d); };
 
-    // 入力変更で即時プレビュー
-    $$("#section-header input, #section-header select").forEach((el) => {
-      el.addEventListener("input", () => setHeader(getHeader()));
-      el.addEventListener("change", () => setHeader(getHeader()));
+    // 入力の都度プレビュー更新
+    $$("#section-header input, #section-header select").forEach(el => {
+      el.addEventListener("input", () => { $("#headerPreview").innerHTML = headerHTML(getHeader()); });
+      el.addEventListener("change", () => { $("#headerPreview").innerHTML = headerHTML(getHeader()); });
     });
-    $$("#section-footer input, #section-footer select").forEach((el) => {
-      el.addEventListener("input", () => setFooter(getFooter()));
-      el.addEventListener("change", () => setFooter(getFooter()));
+    $$("#section-footer input, #section-footer select").forEach(el => {
+      el.addEventListener("input", () => { $("#footerPreview").innerHTML = footerHTML(getFooter()); });
+      el.addEventListener("change", () => { $("#footerPreview").innerHTML = footerHTML(getFooter()); });
     });
 
-    // グラデーションリセット
-    $("#grad_reset_header").addEventListener("click", () => {
-      $("#bg_gradient_header").value = "";
-      setHeader(getHeader());
-    });
-    $("#grad_reset_footer").addEventListener("click", () => {
-      $("#bg_gradient_footer").value = "";
-      setFooter(getFooter());
-    });
+    // グラデーション操作
+    $("#grad_apply_header").addEventListener("click", applyHeaderGradient);
+    $("#grad_reset_header").addEventListener("click", resetHeaderGradient);
+    $("#grad_apply_footer").addEventListener("click", applyFooterGradient);
+    $("#grad_reset_footer").addEventListener("click", resetFooterGradient);
   })();
 </script>
